crates/bevy_basisu_loader_sys/src/snapshots/bevy_basisu_loader_sys__tests__astc_desk_uastc_hdr_6x6_mips.snap
---
source: crates/bevy_basisu_sys/src/lib.rs
expression: result.data
extension: basisu.ktx2
snapshot_kind: binary
---
