crates/bevy_basisu_loader_sys/src/snapshots/bevy_basisu_loader_sys__tests__astc_skybox_xuastc_ldr_8x8_cubemap_mips.snap
---
source: crates/bevy_basisu_loader_sys/src/lib.rs
expression: transcoder.output(info.preferred_target).unwrap()
extension: bin
snapshot_kind: binary
---
