crates/bevy_basisu_loader_sys/src/snapshots/bevy_basisu_loader_sys__tests__transcode_assets_astc.snap
---
source: crates/bevy_basisu_loader_sys/src/lib.rs
expression: results
---
[
    TranscodeInfo {
        width: 256,
        height: 256,
        levels: 9,
        layers: 0,
        faces: 1,
        is_srgb: true,
        basis_format: cETC1S,
        preferred_target: cTFRGBA32,
    },
    TranscodeInfo {
        width: 648,
        height: 876,
        levels: 1,
        layers: 0,
        faces: 1,
        is_srgb: false,
        basis_format: cUASTC_HDR_4x4,
        preferred_target: cTFASTC_HDR_4x4_RGBA,
    },
    TranscodeInfo {
        width: 648,
        height: 876,
        levels: 10,
        layers: 0,
        faces: 1,
        is_srgb: false,
        basis_format: cUASTC_HDR_6x6_INTERMEDIATE,
        preferred_target: cTFASTC_HDR_6x6_RGBA,
    },
    TranscodeInfo {
        width: 768,
        height: 512,
        levels: 10,
        layers: 0,
        faces: 1,
        is_srgb: true,
        basis_format: cASTC_LDR_8x8,
        preferred_target: cTFASTC_LDR_8x8_RGBA,
    },
    TranscodeInfo {
        width: 2048,
        height: 2048,
        levels: 12,
        layers: 0,
        faces: 6,
        is_srgb: true,
        basis_format: cXUASTC_LDR_8x8,
        preferred_target: cTFASTC_LDR_8x8_RGBA,
    },
    TranscodeInfo {
        width: 1120,
        height: 1104,
        levels: 1,
        layers: 0,
        faces: 1,
        is_srgb: true,
        basis_format: cUASTC_LDR_4x4,
        preferred_target: cTFASTC_LDR_4x4_RGBA,
    },
    TranscodeInfo {
        width: 1848,
        height: 888,
        levels: 11,
        layers: 0,
        faces: 1,
        is_srgb: true,
        basis_format: cXUASTC_LDR_8x8,
        preferred_target: cTFASTC_LDR_8x8_RGBA,
    },
]
